# k8s-observability-agent

./: .gitignore  README.md  pyproject.toml
agent/: analyzer.py  cli.py  config.py  core.py  models.py  renderer.py  scanner.py
agent/tools/: __init__.py  registry.py
k8s_observability_agent/: __init__.py  analyzer.py  aws.py  classifier.py  cli.py  cluster.py  config.py  core.py  grafana.py  history.py  iac.py  models.py  prometheus.py  renderer.py  scanner.py
k8s_observability_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
k8s_observability_agent/templates/: grafana_dashboard.json.j2  plan_summary.md.j2  prometheus_rules.yml.j2  validation_report.html.j2  validation_report.md.j2
k8s_observability_agent/tools/: __init__.py  live.py  registry.py
tests/: conftest.py  test_analyzer.py  test_aws.py  test_classifier.py  test_cluster.py  test_grafana.py  test_history.py  test_iac.py  test_live_tools.py  test_models.py  test_prometheus.py  test_renderer.py  test_scanner.py  test_tools.py
