[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k8s-observability-agent"
version = "0.1.0"
description = "AI agent that reverse-engineers K8s platforms from Git repos and designs observability solutions"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.42,<1",
    "pyyaml>=6.0,<7",
    "rich>=13.9,<14",
    "click>=8.1,<9",
    "jinja2>=3.1,<4",
    "httpx>=0.27,<1",
    "gitpython>=3.1,<4",
    "pydantic>=2.8,<3",
    "pathspec>=0.12,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
]

[project.scripts]
k8s-obs = "k8s_observability_agent.cli:main"

[tool.setuptools.packages.find]
include = ["k8s_observability_agent*"]

[tool.setuptools.package-data]
k8s_observability_agent = ["templates/*.j2"]

[tool.ruff]
target-version = "py311"
line-length = 100
